@@ -20,7 +20,7 @@ public class RubyDebugTargetTest extends DebuggerTestBase {
                 new TestBreakpoint("test.rb", 2)
             };
             startDebugging(proxy, breakpoints, 1);
-            proxy.finish();
+            proxy.finish(true);
         }
     }
     
